Fix jumping send button in writer

--- a/src/sass/components/_lightbox.scss
+++ b/src/sass/components/_lightbox.scss
@@ -16,6 +16,7 @@
     }
 
     .lightbox-body {
+        position: relative;
         height: 100%;
         padding: $lightbox-padding;
         background: #fff;
